<resources>
    <string name="app_name">Leno</string>
    <string name="name_user">Leno App</string>

    // Authentication

    <string name="welcome_auth">¡Welcome To Leno!</string>
    <string name="terms">By continuing you agree the <a href="https://write.as/62kmr27x69r61uwr.md">Terms of service</a> and <a href="https://write.as/tub38gppyayotiyh.md">Privacy policy.</a></string>
    <string name="login">continue</string>
    <string name="create_account">create account</string>

    // Bottom navigation bar item titles

    <string name="Home" type="menu">Home</string>
    <string name="Favorite" type="menu">Favorite</string>
    <string name="Search" type="menu">Search</string>
    <string name="Profile" type="menu">Profile</string>

    <string name="home_fragment" type="fragment">Tap + to create a note</string>
    <string name="account_profile">Account</string>
    <string name="email_profile">Example@gmail.com</string>
    <string name="appearance_profile">Appearance</string>
    <string name="notifications_profile">Notifications</string>
    <string name="productivity_profile">Productivity</string>
    <string name="support_profile">Support</string>
    <string name="about_us_profile">About us</string>
    <string name="log_out_profile">Log out</string>
    <string name="untitled_note">Untitled note</string>
    <string name="note_input">Click here for type note</string>
    <string name="created_date">created</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="folder">Folder</string>
    <string name="note_fab_bottom">Note</string>
    <string name="settings">Settings</string>
    <string name="forgot_msg">Please enter your registration email to reset the password, the instructions will be sent to your email.</string>
    <string name="email">E-mail</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_in_title">Hello,\nWelcome Back!</string>
    <string name="sign_up_title">Create\naccount</string>
    <string name="password">Password</string>
    <string name="login_with_google">Login with google</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_title">Forgot \npassword</string>
    <string name="user_name">User name</string>
    <string name="Calendar">Calendar</string>
    <string name="enter_title">Enter title</string>
    <string name="register_msg">Don\'t have a account ? sign up</string>
    <string name="sign_in_continue">SIGN IN TO YOUR ACCOUNT</string>
    <string name="sign_in">log in</string>
    <string name="sign_up">sign up</string>
    <string name="sing_up_msg">Continue for free</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

</resources>