<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="@color/black">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home"
        app:cnb_iconColor="@color/colorPrimary" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/Favorite"
        app:cnb_iconColor="@color/colorPrimary" />


    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_outline_date_range"
        android:title="@string/Calendar"
        app:cnb_iconColor="@color/colorPrimary" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/Profile"
        app:cnb_iconColor="@color/colorPrimary" />

</menu>