<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/Home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/Home"
        android:name="app.leno.presentation.fragments.Home"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home">

    </fragment>


    <fragment
        android:id="@+id/Favorite"
        android:name="app.leno.presentation.fragments.Favorite"
        android:label="@string/Favorite"
        tools:layout="@layout/fragment_favorites">

    </fragment>

    <fragment
        android:id="@+id/Calendar"
        android:name="app.leno.presentation.fragments.Calendar"
        android:label="@string/Calendar"
        tools:layout="@layout/fragment_calendar">

    </fragment>

    <fragment
        android:id="@+id/Profile"
        android:name="app.leno.presentation.fragments.profile.Profile"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/Folder"
        android:name="app.leno.presentation.fragments.Folder"
        android:label="Folder"
        tools:layout="@layout/fragment_folder" />
</navigation>