<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/folder"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/borders_color"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:foregroundGravity="center"
                android:src="@drawable/ic_folder"
                app:tint="@color/blackgray"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/folder"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/note"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/borders_color"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:background="@drawable/borders_note_view"
                android:src="@drawable/ic_outline_note"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                app:tint="@color/white_light"
                android:contentDescription="@string/app_name" />

            <TextView
                android:fontFamily="@font/roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/note_fab_bottom"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>